--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@ loginForm.addEventListener("submit", async function (e) {
         const res = await fetch("https://jambavan-finance-backend.onrender.com/api/user/login", {
             method: "POST",
             headers: { "Content-Type": "application/json" },
-            // credentials: "include",
+            credentials: "include",
             body: JSON.stringify({ email, password })
         });
 
