--- a/index.html
+++ b/index.html
@@ -368,6 +368,7 @@ loginForm.addEventListener("submit", async function (e) {
             method: "POST",
             headers: { "Content-Type": "application/json" },
             credentials: "include",
+            mode:"cors",
             body: JSON.stringify({ email, password })
         });
 
