--- a/dashboard.html
+++ b/dashboard.html
@@ -695,11 +695,29 @@
     font-weight: 500;
 }
 
+.spinner {
+    width: 50px;
+    height: 50px;
+    border: 5px solid #f3f3f3;
+    border-top: 5px solid #3498db;
+    border-radius: 50%;
+    animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
 
     </style>
 </head>
 
 <body>
+
+    <div id="loader-container" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(255,255,255,0.8); z-index: 9999; justify-content: center; align-items: center;">
+    <div class="spinner"></div>
+</div>
 
     <canvas id="partyCanvas"
         style="position:fixed; inset:0; width:100%; height:100%; pointer-events:none; z-index:99999;"></canvas>
