--- a/reset-password.html
+++ b/reset-password.html
@@ -108,10 +108,28 @@ body {
     border-color: var(--danger);
 }
 
+.spinner {
+    width: 50px;
+    height: 50px;
+    border: 5px solid #f3f3f3;
+    border-top: 5px solid #3498db;
+    border-radius: 50%;
+    animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
 </style>
 
 </head>
 <body>
+
+    <div id="loader-container" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(255,255,255,0.8); z-index: 9999; justify-content: center; align-items: center;">
+    <div class="spinner"></div>
+</div>
 
 <div class="auth-container">
     
@@ -170,6 +188,7 @@ body {
     const resetForm = document.getElementById("resetForm");
     const newPasswordInput = document.getElementById("newPassword");
     const confirmPasswordInput = document.getElementById("confirmPassword");
+    const loader = document.getElementById('loader-container');
 
     // --- Helper Functions ---
     function togglePasswordVisibility(fieldId, iconId) {
@@ -318,6 +337,8 @@ body {
             return;
         }
 
+        loader.style.display = 'flex';
+
         try {
             const res = await fetch(`https://jambavan-finance-backend.onrender.com/api/user/reset-password/${token}`, {
                 method: "PUT",
@@ -341,6 +362,8 @@ body {
             
         } catch (err) {
             showToast("Server error: Could not connect to API.", 'danger');
+        } finally {
+            loader.style.display = "none";
         }
     });
 </script>
